production/Deployment.api.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - image: registry.cloudticon.com/cdk8s-argocd-test:203af6dcdffd38e6aae6a30bdf1e9845984afb9b
          name: hello-kubernetes
          ports:
            - containerPort: 8080
