production/Deployment.cdk8s-argocd-test-deployment2-c8b53030.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdk8s-argocd-test-deployment2-c8b53030
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-k8s
  template:
    metadata:
      labels:
        app: hello-k8s
    spec:
      containers:
        - image: paulbouwer/hello-kubernetes:1.7
          name: hello-kubernetes
          ports:
            - containerPort: 8080
