production/Service.cdk8s-argocd-test-api-service-c85b8c20.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdk8s-argocd-test-api-service-c85b8c20
spec:
  externalIPs: []
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    cdk8s.io/metadata.addr: cdk8s-argocd-test-api-c843c609
  type: ClusterIP
