production/Service.cdk8s-argocd-test-service-c80cd0c4.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdk8s-argocd-test-service-c80cd0c4
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: hello-k8s
  type: ClusterIP
