production/Ingress.cdk8s-argocd-test-api-service-ingress-c87b6e21.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdk8s-argocd-test-api-service-ingress-c87b6e21
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: cdk8s-argocd-test-api-service-c85b8c20
                port:
                  number: 3000
            path: /test
            pathType: Prefix
